--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "cors": "^2.8.4",
     "express": "^4.16.4",
     "mongoose": "^5.3.3",
-    "redis": "^2.8.0",
-    "uuid": "^3.3.2"
+    "redis": "^2.8.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.2"
