--- a/package.json
+++ b/package.json
@@ -4,11 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "worker": "node worker.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^4.1.1",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "bull": "^3.4.8",
