separate pm2 with differnet docker containers

--- a/Dockerfile-worker2
+++ b/Dockerfile-worker2
@@ -1,17 +1,10 @@
-# FROM keymetrics/pm2:latest-alpine
+FROM keymetrics/pm2:latest-alpine
 
-# WORKDIR /app
-# COPY . /app
-# RUN npm install
-# EXPOSE 3000
-# CMD [ "pm2-runtime", "start", "ecosystem.config.js" ]
-
-FROM node:8
-WORKDIR /app
-COPY . /app
+WORKDIR /worker2
+COPY . /worker2
 RUN npm install
-CMD npm start
 EXPOSE 3000
+CMD [ "pm2-runtime", "start", "ecosystem.config.js" ]
 
 # FROM node:8
 # WORKDIR /app
